# Gps-Converter

./: CMakeLists.txt  main.c  nmea0183.c
include/: gga.h  main.h  nmea0183.h
resources/: output.nmea
source/: gga.c  main.c  nmea0183.c
